--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-onereact",
+  "name": "first-react-app",
   "homepage": "http://rashida-otunba.github.io/first-react-app",
   "version": "0.1.0",
   "private": true,
